--- a/src/main/resources/com/righit/synthesizer/synth-view.fxml
+++ b/src/main/resources/com/righit/synthesizer/synth-view.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.righit.synthesizer.SynthController">
@@ -43,10 +42,6 @@
            <Label layoutX="53.0" layoutY="94.0" text="N.Voices" />
            <Label layoutX="158.0" layoutY="94.0" text="Spread" />
            <Label layoutX="247.0" layoutY="112.0" text="Blend" />
-         <Line endX="-7.0" endY="-6.0" layoutX="158.0" layoutY="411.0" startX="-7.0" startY="6.0" />
-         <Line endX="-7.0" endY="-6.0" layoutX="165.0" layoutY="146.0" startX="-7.0" startY="6.0" />
-         <Line endX="-7.0" endY="-6.0" layoutX="233.0" layoutY="126.0" startX="-18.0" startY="-6.0" />
-         <Line endX="1.5" endY="-6.0" layoutX="44.0" layoutY="199.0" startX="-11.0" startY="-6.0" />
        </AnchorPane>
    </left>
    <center>
@@ -75,10 +70,6 @@
            <Label layoutX="53.0" layoutY="95.0" text="N.Voices" />
            <Label layoutX="158.0" layoutY="95.0" text="Spread" />
            <Label layoutX="249.0" layoutY="112.0" text="Blend" />
-         <Line endX="-7.0" endY="-6.0" layoutX="157.0" layoutY="411.0" startX="-7.0" startY="6.0" />
-         <Line endX="7.0" endY="-6.0" layoutX="28.0" layoutY="199.0" startX="-5.0" startY="-6.0" />
-         <Line endX="-7.0" endY="-6.0" layoutX="164.0" layoutY="148.0" startX="-7.0" startY="6.0" />
-         <Line endX="-7.0" endY="-6.0" layoutX="233.0" layoutY="128.0" startX="-18.0" startY="-6.0" />
        </AnchorPane>
    </center>
    <right>
@@ -107,25 +98,20 @@
            <Label layoutX="55.0" layoutY="98.0" text="N.Voices" />
            <Label layoutX="157.0" layoutY="98.0" text="Spread" />
            <Label layoutX="249.0" layoutY="120.0" text="Blend" />
-         <Line endX="-7.0" endY="-6.0" layoutX="154.0" layoutY="411.0" startX="-7.0" startY="6.0" />
-         <Line endX="-7.0" endY="-6.0" layoutX="231.0" layoutY="135.0" startX="-18.0" startY="-6.0" />
-         <Line endX="-7.0" endY="-6.0" layoutX="165.0" layoutY="149.0" startX="-7.0" startY="6.0" />
        </AnchorPane>
    </right>
    <bottom>
        <AnchorPane prefHeight="223.0" prefWidth="900.0" BorderPane.alignment="CENTER">
-           <Slider fx:id="masterVolume" layoutX="746.0" layoutY="180.0" max="5.0" min="-60.0" />
-           <Label layoutX="796.0" layoutY="157.0" text="Master" />
-           <Slider fx:id="masterAttack" layoutX="745.0" layoutY="126.0" />
-           <Label layoutX="795.0" layoutY="103.0" text="Attack" />
+           <Slider fx:id="masterVolume" layoutX="824.0" layoutY="166.0" max="6.0" min="-70.0" prefHeight="17.0" prefWidth="76.0" rotate="-90.0" />
+           <Label layoutX="842.0" layoutY="106.0" prefHeight="17.0" prefWidth="40.0" text="Master" />
            <ComboBox fx:id="audioInterfaceSelector" layoutX="686.0" layoutY="29.0" prefWidth="150.0" />
            <ComboBox fx:id="midiInterfaceSelector" layoutX="686.0" layoutY="61.0" prefWidth="150.0" />
            <Button layoutX="853.0" layoutY="29.0" mnemonicParsing="false" onMouseClicked="#changeMixer" text="Ok" />
            <Button fx:id="midiokButton" layoutX="853.0" layoutY="61.0" mnemonicParsing="false" onMouseClicked="#changeMidi" text="Ok" />
            <Label layoutX="597.0" layoutY="33.0" text="Audio Output" />
            <Label fx:id="midiTextLabel" layoutX="600.0" layoutY="65.0" prefHeight="17.0" prefWidth="67.0" text="Midi Input" />
-           <Button fx:id="activatePresetButton" layoutX="597.0" layoutY="114.0" mnemonicParsing="false" onMouseClicked="#update" prefHeight="37.0" prefWidth="127.0" text="Activate Preset" />
-           <Button fx:id="initPresetButton" layoutX="597.0" layoutY="156.0" mnemonicParsing="false" onMouseClicked="#initPreset" prefHeight="37.0" prefWidth="127.0" text="Init Preset" />
+           <Button fx:id="activatePresetButton" layoutX="762.0" layoutY="113.0" mnemonicParsing="false" onMouseClicked="#update" prefHeight="37.0" prefWidth="67.0" text="Activate" />
+           <Button fx:id="initPresetButton" layoutX="761.0" layoutY="164.0" mnemonicParsing="false" onMouseClicked="#initPreset" prefHeight="37.0" prefWidth="68.0" text="Init" />
          <Button fx:id="plusButton" layoutX="494.0" layoutY="41.0" mnemonicParsing="false" onMouseClicked="#addPreset" prefHeight="65.0" prefWidth="67.0" text="+">
             <font>
                <Font size="30.0" />
@@ -136,7 +122,7 @@
                <Font name="System Bold Italic" size="30.0" />
             </font>
          </Button>
-         <TextField fx:id="presetName" layoutX="33.0" layoutY="21.0" prefHeight="25.0" prefWidth="433.0" />
+         <TextField fx:id="presetName" layoutX="33.0" layoutY="14.0" prefHeight="25.0" prefWidth="433.0" />
          <TableView fx:id="presetTable" layoutX="33.0" layoutY="51.0" prefHeight="160.0" prefWidth="433.0">
            <columns>
              <TableColumn fx:id="presetColumn" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="75.0" text="PRESETS" />
@@ -145,6 +131,7 @@
                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
          </TableView>
+         <Button fx:id="activateSavedPreset" layoutX="597.0" layoutY="125.0" mnemonicParsing="false" onMouseClicked="#activateSavedPreset" prefHeight="65.0" prefWidth="137.0" text="Activate Saved Preset" />
        </AnchorPane>
    </bottom>
 </BorderPane>
